--- a/code/Garden.html
+++ b/code/Garden.html
@@ -36,7 +36,11 @@ $('header').removeClass("glide");
 	<div class="content">
 
     <div class="picture">
-		<img src="../images/main2.jpg" alt="main">
+		<img src="../images/main2.png" alt="main">
+		<div class="inner">
+			<h1>YOUR BEST<br>
+			PERSONAL CHOISE</h1>
+		</div>	
 	</div>
 
 
@@ -46,25 +50,26 @@ $('header').removeClass("glide");
 			</div>
 
 			<div class="content__section1_text">
-				<h3>THE GARDEN - ТЕРРИТОРИЯ ШЕФФИЛДСКОГО СТИЛЯ</h3>
-				<p>В <b>The Garden</b> знают, случайностей не бывает. Вы оказались на пороге территории Шеффилдского дизайна в нужное время.</p>
+				<h3 class="m">THE GARDEN - ТЕРРИТОРИЯ ШЕФФИЛДСКОГО СТИЛЯ</h3>
+				<p class="m">В <b>The Garden</b> знают, случайностей не бывает. Вы оказались на пороге территории Шеффилдского дизайна в нужное время.</p>
 
-				<p>Гармония, погружение в природу, неподражаемая лаконичность, интуитивный дизайн – это и есть философия северных стран. Тут каждый найдет именно то, что ищет. 
+				<p class="m">Гармония, погружение в природу, неподражаемая лаконичность, интуитивный дизайн – это и есть философия северных стран. Тут каждый найдет именно то, что ищет. 
 				</p>
 
-				<p>Бренд The Garden представлен шоурумом в центре Киева, и услугами, посвящённые ландшафтному дизайну и образу жизни на севере Европы.</p>  
+				<p class="m">Бренд The Garden представлен шоурумом в центре Киева, и услугами, посвящённые ландшафтному дизайну и образу жизни на севере Европы.</p>  
 
-				<p>Держим курс на север.</p>
+				<p class="m">Держим курс на север.</p>
 			</div>
 		</div>
 
 
 		<div class="content__section2">
 			 <div class="content__section2_text">
-			 	<h3>ЛАНДШАФТНЫЙ ДИЗАЙН, ФЛОРИСТИКА И ПОДАРКИ</h3>
-				<p>Праздник — хорошо, красивый праздник — то, что нужно. Предлагаем все, что нужно для эстетического оформления мероприятий, а также ландшафтного дизайна жилого пространства, покупки корпоративных подарков и презентов для особенных поводов.</p>
+			 	<h3 class="q">ЛАНДШАФТНЫЙ ДИЗАЙН, ФЛОРИСТИКА И ПОДАРКИ</h3>
+				<p class="q">Праздник — хорошо, красивый праздник — то, что нужно. Предлагаем все, что нужно для эстетического оформления мероприятий, а также ландшафтного дизайна жилого пространства, покупки корпоративных подарков и презентов для особенных поводов.</p>
 				
-				<p>The Garden предоставляет услуги профессионального флориста и дизайнера, и знает как создать настроение с помощью правильных деталей, цветов и тонкого вкуса.</p>
+				<p class="q">The Garden предоставляет услуги профессионального флориста и дизайнера, и знает как создать настроение с помощью правильных деталей, цветов и тонкого вкуса.</p>
+				<a href="#"><h3 class="q"><input class="send" value="Подробнее" name="feedback" type="submit"></h3></a>
 			 </div>
 
 			 <div class="content__section2_pic">
@@ -78,19 +83,21 @@ $('header').removeClass("glide");
 			</div>
 
 			<div class="content__section1_text">
-				<h3>ИНТЕРЬЕР И НЕМНОГО ОБ УДОВОЛЬСТВИИ</h3>
-				<p>«Больше красивых повседневных вещей!» — именно с этого лозунга началось мировое шествие скандинавского дизайна. </p>
+				<h3 class="m">ИНТЕРЬЕР И НЕМНОГО ОБ УДОВОЛЬСТВИИ</h3>
+				<p class="m">«Больше красивых повседневных вещей!» — именно с этого лозунга началось мировое шествие шеффилдского дизайна. </p>
 
-				<p>Даже самые тривиальные и повседневные вещи достойны дизайнерского прикосновения. Ведь именно они то, что окружает нас каждый день. </p>
+				<p class="m">Даже самые тривиальные и повседневные вещи достойны дизайнерского прикосновения. Ведь именно они то, что окружает нас каждый день. </p>
 
-				<p>Комфорт, качество, эстетическое удовольствие – все это здесь, сейчас и сегодня. Меньше яркого и показного ради производимого впечатления, больше настоящей жизни.</p>
+				<p class="m">Комфорт, качество, эстетическое удовольствие – все это здесь, сейчас и сегодня. Меньше яркого и показного ради производимого впечатления, больше настоящей жизни.</p>
+				<a href="#"><span><h3 class="m"><input class="send" value="Подробнее" name="feedback" type="submit">+</span></h3></a>
 			</div>
 		</div>
 
 			<div class="content__section2">
 				<div class="content__section2_text">
-					<h3>ЛЕГЕНДЫ ШЕФФИЛДСКОГО ДИЗАЙНА</h3>
-  			        <p>Старые, новые, вечные. От икон английского дизайна до новой классики: все эти легенды объединяет идея, качество и подлинный статус. Долговечность, известность и авторское происхождение является главным козырем этих продуктов, а наша дружба с перечисленными производителями — ваши возможности и новый взгляд на повседневность. В данном случае легендами как раз таки рождаются, но только благодаря гениям и их последователям! Не упустите возможность познакомится ближе.</p>
+					<h3 class="q">ЛЕГЕНДЫ ШЕФФИЛДСКОГО ДИЗАЙНА</h3>
+  			        <p class="q">Старые, новые, вечные. От икон английского дизайна до новой классики: все эти легенды объединяет идея, качество и подлинный статус. Долговечность, известность и авторское происхождение является главным козырем этих продуктов, а наша дружба с перечисленными производителями — ваши возможности и новый взгляд на повседневность. В данном случае легендами как раз таки рождаются, но только благодаря гениям и их последователям! Не упустите возможность познакомится ближе.</p>
+  			        <a href="#"><h3 class="q"><input class="send" value="Подробнее" name="feedback" type="submit"></h3></a>
 				</div>
 
 				<div class="content__section2_pic">
@@ -98,6 +105,113 @@ $('header').removeClass("glide");
 				</div>
 			</div>
 	</div>
+
+
+	<div class="products">
+		<div class="products__reccomend">
+			<h3>МЫ РЕКОМЕНДУЕМ</h3>
+		</div>
+
+		<div class="products__forsale">
+			
+			<div class="products__forsale_r">
+					<div class="pr1"><a href="#"><img src="../images/prod1.jpg" alt="4"></a></div>
+					<p>Полка Woud Vowel dark blue</p>
+					<strong>3 946 грн</strong><br>
+					<a href="#"><h3><input class="send" value="Подробнее" name="feedback" type="submit"></h3></a>
+			</div>
+
+			<div class="products__forsale_r">
+				<div class="pr1"><a href="#"><img src="../images/prod2.png" alt="4"></a></div>
+				<p>Ваза Ment Krum Mugge Mork Jade</p>
+				<strong>2 599 грн</strong>
+				<a href="#"><h3><input class="send" value="Подробнее" name="feedback" type="submit"></h3></a>
+			</div>
+
+			<div class="products__forsale_r">
+				<div class="pr1"><a href="#"><img src="../images/prod3.jpg" alt="4"></a></div>
+				<p>Ваза Kähler HAMMERSHØI small petrol</p>
+				<strong>1 327 грн</strong>
+				<a href="#"><h3><input class="send" value="Подробнее" name="feedback" type="submit"></h3></a>
+			</div>
+
+			<div class="products__forsale_r">
+				<div class="pr1"><a href="#"><img src="../images/prod4.jpg" alt="4"></a></div>
+				<p>Подсвечник Kähler Omaggio blue</p>
+				<strong>1 822 грн</strong>
+				<a href="#"><h3><input class="send" value="Подробнее" name="feedback" type="submit"></h3></a>
+			</div>
+		</div>
+
+		<hr></hr>
+	</div>
+
+
+	<div class="lifestyle">
+		<h3>LIFESTYLE</h3>
+        Lifestyle — это наш блог с актуальными статьями. Svartisen в постоянном поиске интересных тем для<br> историй про Скандинавию, её жителей и скандинавский дизайн. С каждым новым знанием о<br> 
+        нордическом образе жизни желание делиться растёт и мы не можем молчать. Главное правило —<br>
+        делиться дальше. Где бы вы не находились, предлагаем отправиться в мореплавание и открывать<br>
+        Скандинавию вместе.
+        <a href="#"><h3><input class="send" value="Читать" name="feedback" type="submit"></h3></a>
+	</div>
+
+
+	<div class="products">
+		<div class="products__reccomend">
+			<h3>АКСЕССУАРЫ И ПОДАРКИ</h3>
+		</div>
+
+		<div class="products__forsale">
+			
+			<div class="products__forsale_r">
+					<div class="pr1"><a href="#"><img src="../images/aroma.jpg" alt="1"></a></div>
+					<p>Аромасвеча Luin spa Scented Candle </p>
+					<strong>1 119 грн</strong><br>
+					<a href="#"><h3><input class="send" value="Подробнее" name="feedback" type="submit"></h3></a>
+			</div>
+
+			<div class="products__forsale_r">
+				<div class="pr1"><a href="#"><img src="../images/carpet.jpg" alt="2"></a></div>
+				<p>Коврик для йоги The Organic </p>
+				<strong>6 714 грн</strong>
+				<a href="#"><h3><input class="send" value="Подробнее" name="feedback" type="submit"></h3></a>
+			</div>
+
+			<div class="products__forsale_r">
+				<div class="pr1"><a href="#"><img src="../images/bowls.jpg" alt="3"></a></div>
+				<p>Набор из 5 тарелок Design House </p>
+				<strong>10 276 грн</strong>
+				<a href="#"><h3><input class="send" value="Подробнее" name="feedback" type="submit"></h3></a>
+			</div>
+
+			<div class="products__forsale_r">
+				<div class="pr1"><a href="#"><img src="../images/bag.jpg" alt="4"></a></div>
+				<p>Сумка Klippan Sneaky Little my</p>
+				<strong> 988 грн</strong>
+				<a href="#"><h3><input class="send" value="Подробнее" name="feedback" type="submit"></h3></a>
+			</div>
+		</div>
+
+		<hr></hr>
+	</div>
+
+
+
+	<div class="sale">
+		<div class="sale__t">
+			<h3>ХОЧЕШЬ ПОЛУЧАТЬ СКИДКИ И ПОДАРКИ?</h3>
+        	Зарегистрируйся в магазине и получай регулярно новую информацию, вдохновения,<br>
+            скидки, подарочные сертификаты и многое другое. Только для зарегистрированных<br>
+            пользователей.
+        	<a href="#"><h3><input class="send" value="Зарегистрироваться" name="feedback" type="submit"></h3></a>
+        </div>
+	</div>
+
+
+
+
+
 
  	<footer class="footer">
   		<div class="footer__copyright">
