--- a/code/Garden.html
+++ b/code/Garden.html
@@ -37,7 +37,6 @@ $('header').removeClass("glide");
 
     <div class="picture">
 		<img src="../images/main2.png" alt="main">
-		<div class="inner">
 			<h1>YOUR BEST<br>
 			PERSONAL CHOISE</h1>
 		</div>	
@@ -69,7 +68,7 @@ $('header').removeClass("glide");
 				<p class="q">Праздник — хорошо, красивый праздник — то, что нужно. Предлагаем все, что нужно для эстетического оформления мероприятий, а также ландшафтного дизайна жилого пространства, покупки корпоративных подарков и презентов для особенных поводов.</p>
 				
 				<p class="q">The Garden предоставляет услуги профессионального флориста и дизайнера, и знает как создать настроение с помощью правильных деталей, цветов и тонкого вкуса.</p>
-				<a href="#"><h3 class="q"><input class="send" value="Подробнее" name="feedback" type="submit"></h3></a>
+				<a href="#" class="news">Подробнее</a>
 			 </div>
 
 			 <div class="content__section2_pic">
@@ -89,7 +88,7 @@ $('header').removeClass("glide");
 				<p class="m">Даже самые тривиальные и повседневные вещи достойны дизайнерского прикосновения. Ведь именно они то, что окружает нас каждый день. </p>
 
 				<p class="m">Комфорт, качество, эстетическое удовольствие – все это здесь, сейчас и сегодня. Меньше яркого и показного ради производимого впечатления, больше настоящей жизни.</p>
-				<a href="#"><span><h3 class="m"><input class="send" value="Подробнее" name="feedback" type="submit">+</span></h3></a>
+				<a href="#" class="news">Подробнее</a>
 			</div>
 		</div>
 
@@ -97,7 +96,7 @@ $('header').removeClass("glide");
 				<div class="content__section2_text">
 					<h3 class="q">ЛЕГЕНДЫ ШЕФФИЛДСКОГО ДИЗАЙНА</h3>
   			        <p class="q">Старые, новые, вечные. От икон английского дизайна до новой классики: все эти легенды объединяет идея, качество и подлинный статус. Долговечность, известность и авторское происхождение является главным козырем этих продуктов, а наша дружба с перечисленными производителями — ваши возможности и новый взгляд на повседневность. В данном случае легендами как раз таки рождаются, но только благодаря гениям и их последователям! Не упустите возможность познакомится ближе.</p>
-  			        <a href="#"><h3 class="q"><input class="send" value="Подробнее" name="feedback" type="submit"></h3></a>
+  			        <a href="#" class="news">Подробнее</a>
 				</div>
 
 				<div class="content__section2_pic">
@@ -118,28 +117,28 @@ $('header').removeClass("glide");
 					<div class="pr1"><a href="#"><img src="../images/prod1.jpg" alt="4"></a></div>
 					<p>Полка Woud Vowel dark blue</p>
 					<strong>3 946 грн</strong><br>
-					<a href="#"><h3><input class="send" value="Подробнее" name="feedback" type="submit"></h3></a>
+					<a href="#" class="news">Подробнее</a>
 			</div>
 
 			<div class="products__forsale_r">
 				<div class="pr1"><a href="#"><img src="../images/prod2.png" alt="4"></a></div>
 				<p>Ваза Ment Krum Mugge Mork Jade</p>
 				<strong>2 599 грн</strong>
-				<a href="#"><h3><input class="send" value="Подробнее" name="feedback" type="submit"></h3></a>
+				<a href="#" class="news">Подробнее</a>
 			</div>
 
 			<div class="products__forsale_r">
 				<div class="pr1"><a href="#"><img src="../images/prod3.jpg" alt="4"></a></div>
 				<p>Ваза Kähler HAMMERSHØI small petrol</p>
 				<strong>1 327 грн</strong>
-				<a href="#"><h3><input class="send" value="Подробнее" name="feedback" type="submit"></h3></a>
+				<a href="#" class="news">Подробнее</a>
 			</div>
 
 			<div class="products__forsale_r">
 				<div class="pr1"><a href="#"><img src="../images/prod4.jpg" alt="4"></a></div>
 				<p>Подсвечник Kähler Omaggio blue</p>
 				<strong>1 822 грн</strong>
-				<a href="#"><h3><input class="send" value="Подробнее" name="feedback" type="submit"></h3></a>
+				<a href="#" class="news">Подробнее</a>
 			</div>
 		</div>
 
@@ -153,7 +152,7 @@ $('header').removeClass("glide");
         нордическом образе жизни желание делиться растёт и мы не можем молчать. Главное правило —<br>
         делиться дальше. Где бы вы не находились, предлагаем отправиться в мореплавание и открывать<br>
         Скандинавию вместе.
-        <a href="#"><h3><input class="send" value="Читать" name="feedback" type="submit"></h3></a>
+        <a href="#" class="news">Читать</a>
 	</div>
 
 
@@ -168,28 +167,28 @@ $('header').removeClass("glide");
 					<div class="pr1"><a href="#"><img src="../images/aroma.jpg" alt="1"></a></div>
 					<p>Аромасвеча Luin spa Scented Candle </p>
 					<strong>1 119 грн</strong><br>
-					<a href="#"><h3><input class="send" value="Подробнее" name="feedback" type="submit"></h3></a>
+					<a href="#" class="news">Подробнее</a>
 			</div>
 
 			<div class="products__forsale_r">
 				<div class="pr1"><a href="#"><img src="../images/carpet.jpg" alt="2"></a></div>
 				<p>Коврик для йоги The Organic </p>
 				<strong>6 714 грн</strong>
-				<a href="#"><h3><input class="send" value="Подробнее" name="feedback" type="submit"></h3></a>
+				<a href="#" class="news">Подробнее</a>
 			</div>
 
 			<div class="products__forsale_r">
 				<div class="pr1"><a href="#"><img src="../images/bowls.jpg" alt="3"></a></div>
 				<p>Набор из 5 тарелок Design House </p>
 				<strong>10 276 грн</strong>
-				<a href="#"><h3><input class="send" value="Подробнее" name="feedback" type="submit"></h3></a>
+				<a href="#" class="news">Подробнее</a>
 			</div>
 
 			<div class="products__forsale_r">
 				<div class="pr1"><a href="#"><img src="../images/bag.jpg" alt="4"></a></div>
 				<p>Сумка Klippan Sneaky Little my</p>
 				<strong> 988 грн</strong>
-				<a href="#"><h3><input class="send" value="Подробнее" name="feedback" type="submit"></h3></a>
+				<a href="#" class="news">Подробнее</a>
 			</div>
 		</div>
 
@@ -203,8 +202,8 @@ $('header').removeClass("glide");
 			<h3>ХОЧЕШЬ ПОЛУЧАТЬ СКИДКИ И ПОДАРКИ?</h3>
         	Зарегистрируйся в магазине и получай регулярно новую информацию, вдохновения,<br>
             скидки, подарочные сертификаты и многое другое. Только для зарегистрированных<br>
-            пользователей.
-        	<a href="#"><h3><input class="send" value="Зарегистрироваться" name="feedback" type="submit"></h3></a>
+            пользователей.<br>
+        	<a href="#" class="news">Зарегистрироваться</a>
         </div>
 	</div>
 
